--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>react-js-app</title>
+	<title>react-js-table</title>
 
 	<link rel="stylesheet" href="../app/css/reset.css">
 	<link rel="stylesheet" href="../app/css/bootstrap.min.css">
@@ -17,6 +17,27 @@
 				<div class="jumbotron">
 					<h1>Interactive Board</h1>
 				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<form class="player-form" id="player-form">
+					<div class="form-group">
+						<label for="nickname">Nickname</label>
+						<input type="text" class="form-control" name="nickname" id="nickname" placeholder="Nickname">
+					</div>
+					<div class="form-group">
+						<label for="role">Role</label>
+						<input type="text" class="form-control" name="role" id="role" placeholder="Role">
+					</div>
+					<div class="form-group">
+						<label for="age">Age</label>
+						<input type="text" class="form-control" name="age" id="age" placeholder="Age">
+					</div>
+					<div class="submit-group">
+						<div id="createPlayerButton"></div>
+					</div>
+				</form>
 			</div>
 		</div>
 		<div class="row">
