--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>react-js-table</title>
+	<title>react-js-datatable</title>
 
 	<link rel="stylesheet" href="../app/css/reset.css">
 	<link rel="stylesheet" href="../app/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="jumbotron">
-					<h1>Interactive Board</h1>
+					<h1>ReactJS datatable</h1>
 				</div>
 			</div>
 		</div>
